--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Elm hotloading dev environment</title>
-  </head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Talkclassical Top Lists</title>
+        <link
+            rel="preload"
+            as="font"
+            type="font/woff2"
+            href="/fonts/roboto-v20-latin-300.woff2"
+            crossorigin
+        />
+        <link
+            rel="preload"
+            as="font"
+            type="font/woff2"
+            href="/fonts/roboto-v20-latin-regular.woff2"
+            crossorigin
+        />
+        <link
+            rel="preload"
+            as="font"
+            type="font/woff2"
+            href="/fonts/roboto-v20-latin-500.woff2"
+            crossorigin
+        />
+    </head>
 
-  <body></body>
+    <body></body>
 </html>
