--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
+        <meta
+            name="description"
+            content="Best works of classical music as voted by talkclassical.com members"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Talkclassical Top Lists</title>
         <link
