Revert "Trying relative paths"
This reverts commit 4d930ef112d3e6a187dc68cc708bb2a152059f9b.

--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,21 @@
             rel="preload"
             as="font"
             type="font/woff2"
-            href="./fonts/roboto-v20-latin-300.woff2"
+            href="/fonts/roboto-v20-latin-300.woff2"
             crossorigin
         />
         <link
             rel="preload"
             as="font"
             type="font/woff2"
-            href="./fonts/roboto-v20-latin-regular.woff2"
+            href="/fonts/roboto-v20-latin-regular.woff2"
             crossorigin
         />
         <link
             rel="preload"
             as="font"
             type="font/woff2"
-            href="./fonts/roboto-v20-latin-500.woff2"
+            href="/fonts/roboto-v20-latin-500.woff2"
             crossorigin
         />
     </head>
