--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Talkclassical Top Lists</title>
+        <base href="https://zunh.dev/tctop/" target="_blank" />
         <link
             rel="preload"
             as="font"
