--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <base href="http://localhost:8000/" />
         <meta charset="utf-8" />
         <meta
             name="description"
@@ -8,7 +9,6 @@
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Talkclassical Top Lists</title>
-        <base href="https://zunh.dev/tctop/" target="_blank" />
         <link
             rel="preload"
             as="font"
